# clindoc-extractor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  exceptions.py
app/extraction/: base.py  llm_extractor.py  pipeline.py  regex_extractor.py
app/models/: fhir.py  request.py  response.py
app/services/: extractor_service.py  fhir_service.py  queue_service.py
app/utils/: date_parser.py  language_detector.py
tests/: conftest.py  test_api.py  test_extraction.py  test_fhir.py  test_regex.py
